[package]
name = "tokio-file"
edition = "2018"
version = "0.9.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/tokio-file"
description = """
Asynchronous file I/O for Tokio
"""
categories = ["asynchronous", "filesystem"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
futures = "0.3.0"
mio = "0.8.1"
nix = {version = "0.27.0", default-features = false, features = ["ioctl"] }
mio-aio = { version = "0.8.0", features = ["tokio"] }
tokio = { version = "1.19.0", features = [ "net" ] }

[dev-dependencies]
rstest = "0.18.0"
getopts = "0.2.18"
nix = {version = "0.27.0", default-features = false, features = ["user"] }
sysctl = "0.1"
tempfile = "3.4"
tokio = { version = "1.19.0", features = [ "fs", "io-util", "net", "rt", "rt-multi-thread" ] }

[[test]]
name = "functional"
path = "tests/file.rs"

[[test]]
name = "aio_write_eagain"
path = "tests/aio_write_eagain.rs"
