[package]
name = "tokio-file"
edition = "2021"
version = "0.10.0"
authors = ["Alan Somers <asomers@gmail.com>"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/asomers/tokio-file"
rust-version = "1.71"
description = """
Asynchronous file I/O for Tokio
"""
categories = ["asynchronous", "filesystem"]
include = ["src/**/*", "LICENSE-*", "README.md", "CHANGELOG.md"]

[package.metadata.docs.rs]
targets = [
  "x86_64-unknown-freebsd",
]

[dependencies]
futures = "0.3.21"
nix = { version = "0.29.0", default-features = false, features = ["ioctl"] }
mio-aio = { version = "1", features = ["tokio"] }
tokio = { version = "1.39.1", features = [ "net" ] }

[dev-dependencies]
rstest = "0.18.0"
getopts = "0.2.18"
mdconfig = "0.2.0"
nix = {version = "0.29.0", default-features = false, features = ["user"] }
sysctl = "0.6"
tempfile = "3.4"
tokio = { version = "1.39.1", features = [ "fs", "io-util", "macros", "net", "rt", "rt-multi-thread" ] }
tokio-test = "0.4.4"

[[test]]
name = "functional"
path = "tests/file.rs"

[[test]]
name = "aio_write_eagain"
path = "tests/aio_write_eagain.rs"
